[metadata]
name = lbc2rss
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
author = SamR1
platforms = linux
classifiers =
  Development Status :: 4 - Beta
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: JavaScript
  Topic :: Internet :: WWW/HTTP

[options]
packages = find:
zip_safe = false
setup_requires = pytest-runner
install_requires =
  Flask==1.1.2
  gunicorn==20.0.4
  feedgenerator==1.9.1
tests_require =
  feedparser==5.2.1
  pytest
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-isort
  pytest-mypy


[options.extras_require]
test =
  feedparser==5.2.1
  pytest
  pytest-black
  pytest-cov
  pytest-flake8
  pytest-isort
  pytest-mypy

[options.package_data]
lbc2rss =
  VERSION

[options.packages.find]
exclude =
  lbc2rss.tests

[options.entry_points]
console_scripts =
  lbc2rss = lbc2rss.__main__:main

[aliases]
test = pytest

[tool:pytest]
norecursedirs = build dist .cache .eggs .git .venv

[coverage:run]
omit = .*

[coverage:report]
omit =
  lbc2rss/tests/*

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
